--- a/partials/home.html
+++ b/partials/home.html
@@ -2,10 +2,10 @@
     <h1 class="title" id="home-logo"></h1>
 </header>
 
-<div class="content gray-background">
+<div class="content gray-background" ng-init="$navigate.eraseHistory()">
     <ul class="list center selling-form" style="font-weight:bold;font-size:18px;">
         <li class="center" style="border-bottom: solid 1px #E6E6E6;color:#444444;">
-            $300 | 30 listings | 5 sales
+            $0 Sales | 1 Pending
         </li>
     </ul>
     
