--- a/partials/signup_two.html
+++ b/partials/signup_two.html
@@ -12,7 +12,7 @@
     <br/>
     <h3>What's your mailing address?</h3>
     <br/>
-    <p>This is where we mail your packing kits when your items sell.</p>
+    <p>This is where we mail your shipping kits when your items sell.</p>
     <br/>
     <form name="addressForm" ng-submit="signUpStepTwo()">
         <div class="input-group">
