--- a/css/style.css
+++ b/css/style.css
@@ -54,11 +54,15 @@ select {
 .navi a {
     color: #929292;
 }
+ 
+.lb-ab {
+     position: absolute;
+    font-size:13px;
+}
 
 .listing-badge {
-    position: absolute;
 	color: #fff;
-	padding: 6px;
+	padding: 2px 4px;
 }
 
 .listing-badge.Sold {
@@ -175,3 +179,14 @@ select {
     background-image: none;
     box-shadow: inset 0 0 0 rgba(255, 255, 255, .2), 0 0 0 rgba(0, 0, 0, .025);
 }
+ 
+.listing-photo {
+    margin-right: 5px;
+    float:left;
+    background-color:#ffffff;
+}
+
+
+
+
+
