--- a/partials/sell_success.html
+++ b/partials/sell_success.html
@@ -1,4 +1,4 @@
-<header class="bar-title" ng-controller="NavigationController">
+<header class="bar-nav" ng-controller="NavigationController">
     <a class="button" ng-click="slidePage('/', 'slide')">
         Home
     </a>
