--- a/partials/signup_two.html
+++ b/partials/signup_two.html
@@ -1,6 +1,6 @@
-<header class="bar-title">
+<header class="bar-nav">
   	<h1 class="title">Address</h1>
-	<a class="button" ng-click="signUpStepTwo()">
+	<a class="button-next" ng-click="signUpStepTwo()">
     	Next
   	</a>
 </header>
