--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -2,14 +2,14 @@
     <br/>
     <div id="welcome-logo"></div>
     <div class="center">
-		<h3 style="color:#E1FEEE;">You have better things to do...<br/>We sell your fashions for you!</h3>
+		<h4 style="color:#E1FEEE;">You have better things to do...<br/>We sell your fashions for you!</h4>
 	</div>
     
     <div class="welcome-btns" ng-controller="NavigationController">
-        <a ng-click="slidePage('/signup','slide')" class="btn button button-block get-started">
+        <a ng-click="slidePage('/signup','slide')" class="btn button button-block button-primary button-filled">
             Get Started
         </a>
-        <a ng-click="slidePage('/login','slide')" class="btn button button-block">
+        <a ng-click="slidePage('/login','slide')" class="btn button button-block button-filled">
             Sign In
         </a>
     </div>
