--- a/partials/about.html
+++ b/partials/about.html
@@ -1,5 +1,5 @@
-<header class="bar-title" ng-controller="NavigationController">
-    <a class="button" ng-click="back()">
+<header class="bar-nav" ng-controller="NavigationController">
+    <a class="button-prev" ng-click="back()">
     	Back
   	</a>
   	<h1 class="title">About PB</h1>
@@ -9,8 +9,6 @@
 <div id="overlaySpinner" ng-show="spinning" ng-controller="SpinnerController" us-spinner="opts"></div>
 
 <div class="content content-padded" ng-init="getPage('About')">
-    <br/>
     <h3>{{ title }}</h3>
-    <br/>
     <div ng-bind-html-unsafe="content"></div>
 </div>
