--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,10 +1,9 @@
-<header class="bar-title" ng-controller="NavigationController">
-    <a class="button" ng-click="back()">
+<header class="bar-nav" ng-controller="NavigationController">
+    <a class="button-prev" ng-click="back()">
     	Back
   	</a>
   	<h1 class="title">Contact Us</h1>
 </header>
 
 <div class="content">
-    <br/>
 </div>
