Dropped Navigation service and controller. Went back to using .

--- a/partials/account.html
+++ b/partials/account.html
@@ -1,7 +1,6 @@
-<header class="bar-nav" ng-controller="LoginController">
-    <a class="button-prev" ng-click="back()" ng-controller="NavigationController" >Home</a>
+<header class="bar-nav">
+    <a class="button-prev" ng-click="$navigate.back()">Home</a>
   	<h1 class="title">Account</h1>
-    <a ng-click="logout()" confirm-action confirm-action-title="Are you sure you would like to sign out?" class="button">Sign Out</a>
 </header>
 
 <div class="content">
@@ -9,7 +8,8 @@
         <h3>{{ user.get('firstName') }} {{ user.get('lastName') }}</h3>
     </div>
 
-    <ul class="table-view" ng-controller="NavigationController">
+    <ul class="table-view">
+        <li class="table-view-cell table-view-divider">Selling</li>
         <li class="table-view-cell">
             <a ng-click="">
                 Sales ($0)
@@ -25,22 +25,17 @@
     </ul>
     
     <div style="margin-top:20px;"></div>
-    <ul class="table-view" ng-controller="NavigationController">
+    <ul class="table-view">
+        <li class="table-view-cell table-view-divider">Account</li>
         <li class="table-view-cell">
-            <a ng-click="">
-                Tell a Friend
-                <span class="chevron"></span>
-            </a>
-        </li>
-    </ul>
-    
-    <div style="margin-top:20px;"></div>
-    <ul class="table-view" ng-controller="NavigationController">
-        <li class="table-view-cell">
-            <a ng-click="slidePage('/edit_account', 'slide')">
+            <a ng-click="$navigate.go('/edit_account', 'slide')">
                 Edit Account
                 <span class="chevron"></span>
             </a>
+        </li>
+        <li class="table-view-cell" ng-controller="LoginController">
+            <a ng-click="logout()" confirm-action confirm-action-title="Are you sure you would like to sign out?">Sign Out</a>
+            <span class="chevron"></span>
         </li>
     </ul>
 </div>
