--- a/partials/listings.html
+++ b/partials/listings.html
@@ -1,5 +1,5 @@
-<header class="bar-nav" ng-controller="NavigationController">
-    <a class="button-prev" ng-click="back()">
+<header class="bar-nav">
+    <a class="button-prev" ng-click="$navigate.back()">
     	Home
   	</a>
   	<h1 class="title">Your Listings</h1>
@@ -12,7 +12,7 @@
     <div ng-show="listings == 0 && !spinning" class="center"><br/><br/><h3>No listings yet</h3></div>
 	<ul class="table-view listings">
 		<li class="table-view-cell" ng-repeat="listing in listings">
-			<a ng-click="slidePage('/listings/{{ listing.id }}', 'slide')" ng-controller="NavigationController">
+			<a ng-click="$navigate.go('/listings/{{ listing.id }}', 'slide')">
 				<table>
 					<tr>
 						<td>
