--- a/partials/reset_password.html
+++ b/partials/reset_password.html
@@ -1,5 +1,5 @@
-<header class="bar-nav" ng-controller="NavigationController">
-	<a class="button-prev" ng-click="back()">
+<header class="bar-nav">
+	<a class="button-prev" ng-click="$navigate.back()">
     	Back
   	</a>
   	<h1 class="title">Reset Password</h1>
