--- a/partials/sell.html
+++ b/partials/sell.html
@@ -1,4 +1,4 @@
-<header class="bar-nav" ng-controller="NavigationController">
+<header class="bar-nav">
     <button class="button" ng-click="cancelNewListing()" confirm-action="Any photos you've taken or information entered will be lost.">
     	Cancel
   	</button>
