--- a/partials/home.html
+++ b/partials/home.html
@@ -2,49 +2,43 @@
     <h1 class="title" id="home-logo"></h1>
 </header>
 
-<div class="content" ng-init="$navigate.eraseHistory()">
-    
-    <nav class="metrics">
-        <ul class="segmented-controller inset-el">
-            <li>
-                <a href="#"><span style="font-size:28px">1</span></h3><br/>Pending</a>
-            </li>
-            <li>
-                <a href="#"><span style="font-size:28px">4</span><br/>Selling</a>
-            </li>
-            <li>
-                <a href="#"><span style="font-size:28px">$48</span><br/>Sold</a>
-            </li>
-        </ul>
-    </nav>
-    
-    <div class="content-padded">
-        <br/>
-        <div class="row-fluid">
-            <div class="span6 center navi">
-                <a ng-click="$navigate.go('/sell', 'slide')">
-                    <img ng-src="assets/images/sell.png" /><br/>Sell
-                </a>
-            </div>
-            <div class="span6 center navi">
-                <a ng-click="$navigate.go('/listings', 'slide')">
-                    <img ng-src="assets/images/selling.png" /><br/>Listings
-                </a>
-            </div>
-        </div>
-        <br/><br/>
-        <div class="row-fluid">
-            <div class="span6 center navi">
-                <a ng-click="$navigate.go('/account', 'slide')">
-                    <img ng-src="assets/images/account.png" /><br/>Account
-                </a>
-            </div>
-            <div class="span6 center navi">
-                <a ng-click="$navigate.go('/more', 'slide')">
-                    <img ng-src="assets/images/more.png" /><br/>More
-                </a>
-            </div>
-        </div>
+<div class="content content-padded center home-content">
+    <br/>
+    <div class="navi">
+        <a ng-click="$navigate.go('/sell', 'none')" style="padding:35px 0;">
+            <img ng-src="assets/images/sell-button.png" />
+        </a>
     </div>
-    
+    <div style="margin-right:125px;">
+        <img ng-src="assets/images/sell-arrow.png" />
+    </div>
+    <div>
+        <img ng-src="assets/images/snap-txt.png" />
+    </div>
+    <div class="sell-bullets">
+        <ul>
+            <li>Take 4 to 8 photos.</li>
+            <li>Photograph labels and tags.</li>
+        </ul>
+    </div>
 </div>
+
+<nav class="bar-tab">
+    <ul class="tab-inner">
+        <li class="tab-item active">
+            <a href="#">
+                <img ng-src="assets/images/dashboard-active.png" />
+            </a>
+        </li>
+        <li class="tab-item">
+            <a ng-click="$navigate.go('/listings', 'none')">
+                <img ng-src="assets/images/activity.png" />
+            </a>
+        </li>
+        <li class="tab-item">
+            <a ng-click="$navigate.go('/settings', 'none')">
+                <img ng-src="assets/images/settings.png" />
+            </a>
+        </li>
+    </ul>
+</nav>
