--- a/partials/listing.html
+++ b/partials/listing.html
@@ -5,7 +5,7 @@
 </header>
 
 <div id="overlay" ng-show="spinning"></div>
-<div id="overlaySpinner" ng-show="spinning" ng-controller="SpinnerController" us-spinner="opts"></div>
+<div id="overlaySpinner" ng-show="spinning" us-spinner="opts"></div>
 
 <div class="content content-padded">
     <div ng-init="getListing()">
