--- a/partials/listings.html
+++ b/partials/listings.html
@@ -1,12 +1,9 @@
 <header class="bar-nav">
-    <a class="button-prev" ng-click="$navigate.back()">
-    	Home
-  	</a>
-  	<h1 class="title">Your Listings</h1>
+  	<h1 class="title">Activity</h1>
 </header>
 
 <div id="overlay" ng-show="spinning"></div>
-<div id="overlaySpinner" ng-show="spinning" ng-controller="SpinnerController" us-spinner="opts"></div>
+<div id="overlaySpinner" ng-show="spinning" us-spinner="opts"></div>
 
 <div class="content" ng-init="getListings()">
     <div ng-show="listings == 0 && !spinning" class="center"><br/><br/><h3>No listings yet</h3></div>
@@ -35,3 +32,21 @@
 		</li>
 	</ul>
 </div>
+
+<nav class="bar-tab">
+    <ul class="tab-inner">
+        <li class="tab-item active">
+            <a ng-click="$navigate.go('/', 'none')">
+                <img ng-src="assets/images/dashboard.png" />
+            </a>
+        </li>
+        <li class="tab-item">
+            <img ng-src="assets/images/activity-active.png" />
+        </li>
+        <li class="tab-item">
+            <a ng-click="$navigate.go('/settings', 'none')">
+                <img ng-src="assets/images/settings.png" />
+            </a>
+        </li>
+    </ul>
+</nav>
