--- a/partials/sell.html
+++ b/partials/sell.html
@@ -6,7 +6,7 @@
 </header>
 
 <div id="overlay" ng-show="spinning"></div>
-<div id="overlaySpinner" ng-show="spinning" ng-controller="SpinnerController" us-spinner="opts"></div>
+<div id="overlaySpinner" ng-show="spinning" us-spinner="opts"></div>
 
 <div class="content">
     <!--
